--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,8 +32,12 @@ jobs:
     - name: Set binary path
       run: echo "BINARY_PATH=target/release/format-date-for-irs${{ matrix.os == 'windows-latest' && '.exe' || '' }}" >> $GITHUB_ENV
 
-    - name: Set Timestamp
-      run: echo "TIMESTAMP=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
+    - name: Set Release Timestamp
+      run: echo "RELEASE_TIMESTAMP=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
+
+    - name: Set Tag Timestamp
+      run: echo "TAG_TIMESTAMP=$(date -u +'%Y-%m-%dT%H%M%SZ')" >> $GITHUB_ENV
+
 
     - name: Create Release
       id: create_release
@@ -41,8 +45,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: release-${{ env.TIMESTAMP }}
-        release_name: Release ${{ env.TIMESTAMP }}
+        tag_name: release-${{ env.TAG_TIMESTAMP }}
+        release_name: Release ${{ env.RELEASE_TIMESTAMP }}
         draft: false
         prerelease: false
 
