--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -89,7 +89,7 @@ jobs:
         with:
           name: ubuntu-latest-binary
       - run: |
-          FILE=$(ls target/releases/format-date-for-irs)
+          FILE=$(ls target/release/format-date-for-irs)
           NEW_FILE="format-date-for-irs-@{{ matrix.os }}-binary"
           mv $FILE $NEW_FILE
           echo "Uploading $NEW_FILE"
@@ -106,7 +106,7 @@ jobs:
         with:
           name: macos-latest-binary
       - run: |
-          FILE=$(ls target/releases/format-date-for-irs)
+          FILE=$(ls target/release/format-date-for-irs)
           NEW_FILE="format-date-for-irs-@{{ matrix.os }}-binary"
           mv $FILE $NEW_FILE
           echo "Uploading $NEW_FILE"
@@ -120,14 +120,14 @@ jobs:
 
       - name: Download and Upload Artifact for Windows
         run: |
-          $FILE = Get-ChildItem -Path target\releases -Filter format-date-for-irs-*.exe | Select-Object -First 1 -ExpandProperty Name
-          Rename-Item -Path target\releases\$FILE -NewName format-date-for-irs-(${matrix.os}-binary.exe)
+          $FILE = Get-ChildItem -Path target\release -Filter format-date-for-irs.exe | Select-Object -First 1 -ExpandProperty Name
+          Rename-Item -Path target\release\$FILE -NewName format-date-for-irs-(${matrix.os}-binary.exe)
           echo "Found Windows file: format-date-for-irs-(${matrix.os}-binary.exe)"
           echo "Upload URL: ${{ steps.create_release.outputs.upload_url }}"
           curl \
             -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/octet-stream" \
-            --data-binary @target\releases\format-date-for-irs-(${matrix.os}-binary.exe) \
+            --data-binary @target\release\format-date-for-irs-(${matrix.os}-binary.exe) \
             "${{ steps.create_release.outputs.upload_url }}?name=format-date-for-irs-${{ matrix.os }}-binary.exe&label=format-date-for-irs-${{ matrix.os }}-binary.exe"
         shell: pwsh
