--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -89,7 +89,7 @@ jobs:
         with:
           name: ubuntu-latest-binary
       - run: |
-          echo $(ls target/release)
+          echo $(ls)
           FILE=$(ls target/release/format-date-for-irs)
           NEW_FILE="format-date-for-irs-@{{ matrix.os }}-binary"
           mv $FILE $NEW_FILE
