--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,56 +14,125 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        profile: minimal
+        override: true
+        cache: 'cargo'
 
-      - name: Cache Cargo Dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+    - name: Cache Cargo Dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release
+    - name: Build
+      uses: actions-rs/cargo@v1
+      with:
+        command: build
+        args: --release
 
-      - name: Print Working Directory (within Build)
-        run: pwd  
+    - name: Set binary path
+      run: echo "BINARY_PATH=target/release/format-date-for-irs${{ matrix.os == 'windows-latest' && '.exe' || '' }}" >> $GITHUB_ENV
 
-      - name: List Target Build Directory Contents
-        run: |
-          if [[ "$RUNNER_OS" == "Windows" ]]; then 
-            dir target/release 
-          else
-            ls -la target/release 
-          fi
-        shell: bash
+    - name: Set Release Timestamp
+      run: echo "RELEASE_TIMESTAMP=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
 
-      - name: Set binary path 
-        run: | 
-          if [[ "$RUNNER_OS" == "Windows" ]]; then 
-            echo "BINARY_PATH=target\release\format-date-for-irs.exe" >> $GITHUB_ENV
-          else
-            echo "BINARY_PATH=target/release/format-date-for-irs${{ matrix.os == 'windows-latest' && '.exe' || '' }}" >> $GITHUB_ENV
-          fi 
-        shell: bash 
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ matrix.os }}-binary
-          path: ${{ env.BINARY_PATH }}
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ matrix.os }}
+        release_name: Release ${{ env.RELEASE_TIMESTAMP }}
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ${{ env.BINARY_PATH }}
+        asset_name: ${{ matrix.os }}-binary${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+        asset_content_type: application/octet-stream
+
+# name: Rust Build and Release
+
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
+
+# jobs:
+#   build:
+#     name: Build on ${{ matrix.os }}
+#     runs-on: ${{ matrix.os }}
+#     strategy:
+#       matrix:
+#         os: [ubuntu-latest, macos-latest, windows-latest]
+#     steps:
+#       - uses: actions/checkout@v4
+
+#       - name: Install Rust
+#         uses: actions-rs/toolchain@v1
+#         with:
+#           toolchain: stable
+#           profile: minimal
+#           override: true
+
+#       - name: Cache Cargo Dependencies
+#         uses: actions/cache@v3
+#         with:
+#           path: |
+#             ~/.cargo/registry
+#             ~/.cargo/git
+#             target
+#           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+#       - name: Build
+#         uses: actions-rs/cargo@v1
+#         with:
+#           command: build
+#           args: --release
+
+#       - name: Print Working Directory (within Build)
+#         run: pwd  
+
+#       - name: List Target Build Directory Contents
+#         run: |
+#           if [[ "$RUNNER_OS" == "Windows" ]]; then 
+#             dir target/release 
+#           else
+#             ls -la target/release 
+#           fi
+#         shell: bash
+
+#       - name: Set binary path 
+#         run: | 
+#           if [[ "$RUNNER_OS" == "Windows" ]]; then 
+#             echo "BINARY_PATH=target\release\format-date-for-irs.exe" >> $GITHUB_ENV
+#           else
+#             echo "BINARY_PATH=target/release/format-date-for-irs${{ matrix.os == 'windows-latest' && '.exe' || '' }}" >> $GITHUB_ENV
+#           fi 
+#         shell: bash 
+
+#       - name: Upload Artifact
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: ${{ matrix.os }}-binary
+#           path: ${{ env.BINARY_PATH }}
 
   # create-release-and-upload-assets:
   #   name: Create Release and Upload Assets
