--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,12 +39,17 @@ jobs:
         command: build
         args: --release
 
-    - name: Set binary path
+    - name: Set Binary Path
       run: echo "BINARY_PATH=target/release/format-date-for-irs${{ matrix.os == 'windows-latest' && '.exe' || '' }}" >> $GITHUB_ENV
       shell: bash
 
     - name: Set Release Timestamp
       run: echo "RELEASE_TIMESTAMP=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
+      shell: bash
+
+    - name: Set Tag Timestamp
+      run: echo "TAG_TIMESTAMP=$(date -u +'%Y-%m-%dT%H%M%SZ')" >> $GITHUB_ENV
+      shell: bash
 
     - name: Create Release
       id: create_release
@@ -52,7 +57,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ matrix.os }}
+        tag_name: release-${{ env.TAG_TIMESTAMP }}
         release_name: Release ${{ env.RELEASE_TIMESTAMP }}
         draft: false
         prerelease: false
